--- a/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/index.html
+++ b/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/index.html
@@ -9,19 +9,13 @@
   </head>
   <body>
     <header>
-      <div class="header-wrapper">
-        <div class="button-wrapper">
-          <div class="header-shop-button"><img src="assets/imgs/logo.png" />SHOP</div>
-        </div>
-        <div class="button-wrapper">
-          <div class="header-button">Our Honey</div>
-          <div class="header-button">Trace Honey</div>
-        </div>
-        <div class="button-wrapper">
-          <div class="header-button">Facilities</div>
-          <div class="header-button">Contact</div>
-        </div>
-      </div>
+      <nav>
+        <div class="header-shop-button"><img src="assets/imgs/logo.png" />SHOP</div>
+        <div class="header-button">Our Honey</div>
+        <div class="header-button">Trace Honey</div>
+        <div class="header-button">Facilities</div>
+        <div class="header-button">Contact</div>
+      </nav>
     </header>
     <main>
       <div class="titolo">
@@ -88,34 +82,24 @@
           </div>
         </div>
       </div>
-      <div class="card">
-        <img src="assets/imgs/honey.jpg" alt="" />
-        <div class="card-label">
-          <div class="card-description">
-            <div>
-              <span>100% Bio Honey</span>
-              <p>Italian, not treated</p>
-            </div>
-            <p>7$/Kg</p>
-          </div>
-          <div class="card-button">
-            <div><span>Add to cart</span></div>
-          </div>
-        </div>
-      </div>
       <div class="titolo">
         <h2>Latest News</h2>
       </div>
       <div class="last-container">
         <div class="text-container">
-          <h3>Our delicious honey</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla harum dolore beatae. Accusantium optio nam
-            iste harum tenetur. Corrupti, ratione! Neque laboriosam nostrum tempore labore ut hic cumque repellendus
-            fuga, autem doloremque officiis nemo blanditiis totam id! Omnis quibusdam esse et, repellat pariatur, in at
-            possimus iure veritatis adipisci provident!
-          </p>
-          <img src="assets/imgs/honey.jpg" alt="" />
+          <div class="inner-text">
+            <h3>Our delicious honey</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla harum dolore beatae. Accusantium optio nam
+              iste harum tenetur. Corrupti, ratione! Neque laboriosam nostrum tempore labore ut hic cumque repellendus
+              fuga, autem doloremque officiis nemo blanditiis totam id! Omnis quibusdam esse et, repellat pariatur, in
+              at possimus iure veritatis adipisci provident!
+            </p>
+          </div>
+
+          <div class="text-container-img">
+            <img src="assets/imgs/honey.jpg" alt="" />
+          </div>
         </div>
       </div>
     </main>
