creati post it , da fare animazioni

--- a/corso/settimana_4_css_avanzato/l16_23_11_2023/esercizi/start1/postit.html
+++ b/corso/settimana_4_css_avanzato/l16_23_11_2023/esercizi/start1/postit.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-<meta charset="utf-8">
-<title>Esempio di lavagna con Post It</title>
-<meta name="description" content="Creazione di una lavagna con post animati al rollover">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="postit.css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Esempio di lavagna con Post It</title>
+    <meta name="description" content="Creazione di una lavagna con post animati al rollover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="postit.css" />
+  </head>
 
-<body>
-
-</body>
+  <body>
+    <main>
+      <div class="task1">
+        <h2>Task #1</h2>
+        <p>Creare i post</p>
+      </div>
+      <div class="task2">
+        <h2>Task #2</h2>
+        <p>Colorarli</p>
+      </div>
+      <div class="task3">
+        <h2>Task #3</h2>
+        <p>Affiancarli</p>
+      </div>
+      <div class="task4">
+        <h2>Task #4</h2>
+        <p>Spaziarli</p>
+      </div>
+      <div class="task5">
+        <h2>Task #5</h2>
+        <p>Ombreggiali</p>
+      </div>
+      <div class="task6">
+        <h2>Task #6</h2>
+        <p>Ruotarli</p>
+      </div>
+      <div class="task7">
+        <h2>Task #7</h2>
+        <p>Animarli</p>
+      </div>
+      <div class="task8">
+        <h2>Task #8</h2>
+        <p>Testarli</p>
+      </div>
+    </main>
+  </body>
 </html>
