--- a/corso/settimana_5_bootstrap/l16_27_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l16_27_11_2023/esercizi/index.html
@@ -7,13 +7,115 @@
     <title>Bootstrap HW</title>
   </head>
   <body>
-    <h1 class="text-center">Pratica con il Grid System</h1>
+    <h1 class="text-center p-3">Pratica con il Grid System</h1>
     <h2 class="text-center">Esercizio 1</h2>
-    <div class="container">
+    <div class="container p-3">
       <div class="row">
-        <div class="col4"></div>
-        <div class="col4"></div>
-        <div class="col4"></div>
+        <div class="col-md-4 bg-primary text-white p-3 border border-dark">Esercizio 1</div>
+        <div class="col-md-4 bg-primary text-white p-3 border border-dark">Esercizio 1</div>
+        <div class="col-md-4 bg-primary text-white p-3 border border-dark">Esercizio 1</div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 2</h2>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-md-4 bg-warning text-dark p-3 border border-dark">Esercizio 2</div>
+        <div class="col-12 col-md-4 bg-warning text-dark p-3 border border-dark">Esercizio 2</div>
+        <div class="col-12 col-md-4 bg-warning text-dark p-3 border border-dark">Esercizio 2</div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 3</h2>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 bg-success text-white p-3 border border-dark">Esercizio 3.1</div>
+        <div class="col-12 bg-success text-white p-3 border border-dark">Esercizio 3.1</div>
+        <div class="col-12 bg-success text-white p-3 border border-dark">Esercizio 3.1</div>
+      </div>
+    </div>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark">Esercizio 3.2</div>
+        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark">Esercizio 3.2</div>
+        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark">Esercizio 3.2</div>
+      </div>
+    </div>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark">Esercizio 3.3</div>
+        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark">Esercizio 3.3</div>
+        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark">Esercizio 3.3</div>
+      </div>
+    </div>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark">
+          Esercizio 3.4
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark">
+          Esercizio 3.4
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark">
+          Esercizio 3.4
+        </div>
+      </div>
+    </div>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark">
+          Esercizio 3.5
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark">
+          Esercizio 3.5
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark">
+          Esercizio 3.5
+        </div>
+      </div>
+    </div>
+    <div class="container p-3">
+      <div class="row">
+        <div
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark"
+        >
+          Esercizio 3.6
+        </div>
+        <div
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark"
+        >
+          Esercizio 3.6
+        </div>
+        <div
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark"
+        >
+          Esercizio 3.6
+        </div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 4</h2>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-lg-3 bg-danger text-white border border-dark p-3">Esercizio 4</div>
+        <div class="col-lg-6 bg-danger text-white border border-dark p-3">Esercizio 4</div>
+        <div class="col-lg-3 bg-danger text-white border border-dark p-3">Esercizio 4</div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 5</h2>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-12 col-lg-8 bg-info text-white p-3 border border-dark">
+          <div class="row">
+            <div class="bg-secondary text-white p-3 border border-dark">inner</div>
+            <div class="bg-secondary text-white p-3 border border-dark">inner</div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4 bg-info text-white p-3 border border-dark">main</div>
+      </div>
+    </div>
+    <h2 class="text-center">Esercizio 6</h2>
+    <div class="container p-3">
+      <div class="row">
+        <div class="col-lg-5 bg-dark text-white p-3"></div>
+        <div class="col-lg-5 offset-lg-2 bg-dark text-white p-3"></div>
       </div>
     </div>
   </body>
