--- a/corso/settimana_5_bootstrap/l16_27_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l16_27_11_2023/esercizi/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="bootstrap.css" />
+    <style>
+      .transition {
+        transition: all 0.2s;
+      }
+    </style>
     <title>Bootstrap HW</title>
   </head>
   <body>
@@ -27,47 +32,59 @@
     <h2 class="text-center">Esercizio 3</h2>
     <div class="container p-3">
       <div class="row">
-        <div class="col-12 bg-success text-white p-3 border border-dark">Esercizio 3.1</div>
-        <div class="col-12 bg-success text-white p-3 border border-dark">Esercizio 3.1</div>
-        <div class="col-12 bg-success text-white p-3 border border-dark">Esercizio 3.1</div>
+        <div class="col-12 bg-success text-white p-3 border border-dark transition">Esercizio 3.1</div>
+        <div class="col-12 bg-success text-white p-3 border border-dark transition">Esercizio 3.1</div>
+        <div class="col-12 bg-success text-white p-3 border border-dark transition">Esercizio 3.1</div>
       </div>
     </div>
     <div class="container p-3">
       <div class="row">
-        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark">Esercizio 3.2</div>
-        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark">Esercizio 3.2</div>
-        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark">Esercizio 3.2</div>
+        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark transition">Esercizio 3.2</div>
+        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark transition">Esercizio 3.2</div>
+        <div class="col-12 col-sm-4 bg-success text-white p-3 border border-dark transition">Esercizio 3.2</div>
       </div>
     </div>
     <div class="container p-3">
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark">Esercizio 3.3</div>
-        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark">Esercizio 3.3</div>
-        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark">Esercizio 3.3</div>
-      </div>
-    </div>
-    <div class="container p-3">
-      <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark">
-          Esercizio 3.4
+        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark transition">
+          Esercizio 3.3
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark">
-          Esercizio 3.4
+        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark transition">
+          Esercizio 3.3
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark">
-          Esercizio 3.4
+        <div class="col-12 col-sm-12 col-md-4 bg-success text-white p-3 border border-dark transition">
+          Esercizio 3.3
         </div>
       </div>
     </div>
     <div class="container p-3">
       <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark transition">
+          Esercizio 3.4
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark transition">
+          Esercizio 3.4
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 bg-success text-white p-3 border border-dark transition">
+          Esercizio 3.4
+        </div>
+      </div>
+    </div>
+    <div class="container p-3">
+      <div class="row">
+        <div
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark transition"
+        >
           Esercizio 3.5
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark">
+        <div
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark transition"
+        >
           Esercizio 3.5
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark">
+        <div
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 bg-success text-white p-3 border border-dark transition"
+        >
           Esercizio 3.5
         </div>
       </div>
@@ -75,17 +92,17 @@
     <div class="container p-3">
       <div class="row">
         <div
-          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark"
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark transition"
         >
           Esercizio 3.6
         </div>
         <div
-          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark"
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark transition"
         >
           Esercizio 3.6
         </div>
         <div
-          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark"
+          class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-4 bg-success text-white p-3 border border-dark transition"
         >
           Esercizio 3.6
         </div>
@@ -102,20 +119,20 @@
     <h2 class="text-center">Esercizio 5</h2>
     <div class="container p-3">
       <div class="row">
-        <div class="col-12 col-lg-8 bg-info text-white p-3 border border-dark">
+        <div class="col-12 col-lg-8 bg-info text-white p-3 border border-dark transition">
           <div class="row">
             <div class="bg-secondary text-white p-3 border border-dark">inner</div>
             <div class="bg-secondary text-white p-3 border border-dark">inner</div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 bg-info text-white p-3 border border-dark">main</div>
+        <div class="col-12 col-lg-4 bg-info text-white p-3 border border-dark transition">main</div>
       </div>
     </div>
     <h2 class="text-center">Esercizio 6</h2>
     <div class="container p-3">
       <div class="row">
-        <div class="col-lg-5 bg-dark text-white p-3"></div>
-        <div class="col-lg-5 offset-lg-2 bg-dark text-white p-3"></div>
+        <div class="col-lg-5 bg-dark text-white p-3 transition"></div>
+        <div class="col-lg-5 offset-lg-2 bg-dark text-white p-3 transition"></div>
       </div>
     </div>
   </body>
