--- a/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
@@ -62,7 +62,7 @@
           <button class="btn btn-info text-white btn-lg px-5" type="button">Prenota Ora</button>
         </div>
       </div>
-      <div id="Saldi" class="container mb-5">
+      <div id="saldi" class="container mb-5">
         <h2>Saldi</h2>
         <div class="row gy-4 gx-3 gy-sm-0">
           <div class="col-6 col-sm-4 col-lg-3">
@@ -119,7 +119,7 @@
           </div>
         </div>
       </div>
-      <div id="Welcome Summer" class="container mb-5">
+      <div id="welcome-summer" class="container mb-5">
         <h2>Welcome Summer</h2>
         <div class="row gy-4">
           <div class="col-6 col-lg-4">
@@ -202,7 +202,119 @@
           </div>
         </div>
       </div>
+      <div id="offerta-del-giorno" class="container mb-5">
+        <h2>Offerta del giorno</h2>
+        <div class="row">
+          <div class="col-8">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="text-start">
+              <h3>Fushifaru Maldive</h3>
+              <p>15.01.2021-31.01.2021</p>
+              <p>Ville a partire da 500$ non fartele sfuggire</p>
+              <button>Best offer</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="last-minute" class="container mb-5">
+        <h2>Last Minute</h2>
+        <div class="row gy-4">
+          <div class="col-6 col-sm-4 col-lg-2">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-lg-2">
+            <div>
+              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="recensioni" class="container mb-5">
+        <h2 class="text-center">Dicono di noi</h2>
+        <div class="row gap-3">
+          <div class="col-12">
+            <div class="row">
+              <div class="col-2 col-lg-1">
+                <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+              </div>
+              <div class="col-10 col-lg-11">
+                <h4>Username</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus accusantium deleniti
+                  perspiciatis sunt autem qui quas aspernatur dicta dignissimos perferendis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col-2 col-lg-1">
+                <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+              </div>
+              <div class="col-10 col-lg-11">
+                <h4>Username</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus accusantium deleniti
+                  perspiciatis sunt autem qui quas aspernatur dicta dignissimos perferendis.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="row">
+              <div class="col-2 col-lg-1">
+                <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+              </div>
+              <div class="col-10 col-lg-11">
+                <h4>Username</h4>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus accusantium deleniti
+                  perspiciatis sunt autem qui quas aspernatur dicta dignissimos perferendis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+    <footer>
+      <div id="jumbotron" class="container-fluid px-0">
+        <div class="p-5 bg-dark text-md-start shadow-sm">
+          <div class="text-center">
+            <button class="btn btn-dark text-secondary btn-lg px-5 btn-outline-secondary mb-3" type="button">
+              Prenota Ora
+            </button>
+          </div>
+          <p class="fs-6 text-white text-center">2021 Agenzia di viaggi. All right reserved</p>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
