--- a/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="bootstrap.css" />
     <title>Agenzia Viaggi</title>
+    <style>
+      .top-20 {
+        top: 20px !important;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -125,6 +130,7 @@
           <div class="col-6 col-lg-4">
             <div class="card shadow-lg">
               <img src="assets/img.jpg" class="card-img-top" alt="..." />
+              <span class="position-absolute top-20 end-0 translate-middle badge rounded-pill bg-danger">HOT</span>
               <div class="card-body">
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
@@ -137,7 +143,8 @@
           </div>
           <div class="col-6 col-lg-4">
             <div class="card shadow-lg">
-              <img src="assets/img.jpg" class="card-img-top" alt="" />
+              <img src="assets/img.jpg" class="card-img-top" alt="..." />
+              <span class="position-absolute top-20 end-0 translate-middle badge rounded-pill bg-danger">HOT</span>
               <div class="card-body">
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
@@ -150,7 +157,8 @@
           </div>
           <div class="col-6 col-lg-4">
             <div class="card shadow-lg">
-              <img src="assets/img.jpg" class="card-img-top" alt="" />
+              <img src="assets/img.jpg" class="card-img-top" alt="..." />
+              <span class="position-absolute top-20 end-0 translate-middle badge rounded-pill bg-danger">HOT</span>
               <div class="card-body">
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
@@ -163,7 +171,8 @@
           </div>
           <div class="col-6 col-lg-4">
             <div class="card shadow-lg">
-              <img src="assets/img.jpg" class="card-img-top" alt="" />
+              <img src="assets/img.jpg" class="card-img-top" alt="..." />
+              <span class="position-absolute top-20 end-0 translate-middle badge rounded-pill bg-danger">HOT</span>
               <div class="card-body">
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
@@ -176,7 +185,8 @@
           </div>
           <div class="col-6 col-lg-4">
             <div class="card shadow-lg">
-              <img src="assets/img.jpg" class="card-img-top" alt="" />
+              <img src="assets/img.jpg" class="card-img-top" alt="..." />
+              <span class="position-absolute top-20 end-0 translate-middle badge rounded-pill bg-danger">HOT</span>
               <div class="card-body">
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
@@ -189,7 +199,8 @@
           </div>
           <div class="col-6 col-lg-4">
             <div class="card shadow-lg">
-              <img src="assets/img.jpg" class="card-img-top" alt="" />
+              <img src="assets/img.jpg" class="card-img-top" alt="..." />
+              <span class="position-absolute top-20 end-0 translate-middle badge rounded-pill bg-danger">HOT</span>
               <div class="card-body">
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
@@ -304,7 +315,7 @@
       </div>
     </main>
     <footer>
-      <div id="jumbotron" class="container-fluid px-0">
+      <div id="footer" class="container-fluid px-0">
         <div class="p-5 bg-dark text-md-start shadow-sm">
           <div class="text-center">
             <button class="btn btn-dark text-secondary btn-lg px-5 btn-outline-secondary mb-3" type="button">
