--- a/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
@@ -226,7 +226,7 @@
               <h3>Fushifaru Maldive</h3>
               <p>15.01.2021-31.01.2021</p>
               <p>Ville a partire da 500$ non fartele sfuggire</p>
-              <button>Best offer</button>
+              <button class="btn btn-dark text-white rounded-5">Best offer</button>
             </div>
           </div>
         </div>
