--- a/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
@@ -218,7 +218,7 @@
         <div class="row">
           <div class="col-8">
             <div>
-              <img class="object-fit-fill img-fluid rounded-2 shadow" src="assets/img.jpg" alt="" />
+              <img class="object-fit-cover w-100 rounded-2 shadow" src="assets/img.jpg" alt="" />
             </div>
           </div>
           <div class="col-4">
@@ -272,7 +272,9 @@
           <div class="col-12">
             <div class="row">
               <div class="col-2 col-lg-1">
-                <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+                <div class="rounded-circle border border-3 border-info">
+                  <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+                </div>
               </div>
               <div class="col-10 col-lg-11">
                 <h4>Username</h4>
@@ -286,7 +288,9 @@
           <div class="col-12">
             <div class="row">
               <div class="col-2 col-lg-1">
-                <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+                <div class="rounded-circle border border-3 border-info">
+                  <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+                </div>
               </div>
               <div class="col-10 col-lg-11">
                 <h4>Username</h4>
@@ -300,7 +304,9 @@
           <div class="col-12">
             <div class="row">
               <div class="col-2 col-lg-1">
-                <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+                <div class="rounded-circle border border-3 border-info">
+                  <img class="img-fluid object-fit-cover" src="assets/user.png" alt="" />
+                </div>
               </div>
               <div class="col-10 col-lg-11">
                 <h4>Username</h4>
