--- a/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
@@ -77,7 +77,7 @@
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi hic maiores recusandae ipsum
-                  veniam ex. Quibusdam quisquam assumenda reprehenderit!
+                  veniam ex.
                 </p>
                 <a href="#" class="btn btn-info">Prenota</a>
               </div>
@@ -90,7 +90,7 @@
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi hic maiores recusandae ipsum
-                  veniam ex. Quibusdam quisquam assumenda reprehenderit!
+                  veniam ex.
                 </p>
                 <a href="#" class="btn btn-info">Prenota</a>
               </div>
@@ -103,7 +103,7 @@
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi hic maiores recusandae ipsum
-                  veniam ex. Quibusdam quisquam assumenda reprehenderit!
+                  veniam ex.
                 </p>
                 <a href="#" class="btn btn-info">Prenota</a>
               </div>
@@ -116,7 +116,7 @@
                 <h5 class="card-title">Titolo</h5>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi hic maiores recusandae ipsum
-                  veniam ex. Quibusdam quisquam assumenda reprehenderit!
+                  veniam ex.
                 </p>
                 <a href="#" class="btn btn-info">Prenota</a>
               </div>
