--- a/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l17_28_11_2023/esercizi/index.html
@@ -15,7 +15,9 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">
+            <img class="object-fit-cover" src="assets/logox.png" width="70px" alt=""
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -61,9 +63,11 @@
     <main>
       <div id="jumbotron" class="container mb-5">
         <div class="p-5 bg-light rounded-3 text-center text-md-start shadow-sm">
-          <h1 class="display-5 fw-bold">Agenzia di Viaggi</h1>
+          <h1 class="display-5 fw-light text-secondary">
+            Agenzia di Viaggi<span class="fs-4 align-middle text-dark"> - da Lobbia</span>
+          </h1>
           <hr />
-          <p class="fs-4">Scopri le destinazioni più calde del momento!</p>
+          <p class="fs-4 text-secondary fst-italic">Scopri le destinazioni più calde del momento!</p>
           <button class="btn btn-info text-white btn-lg px-5" type="button">Prenota Ora</button>
         </div>
       </div>
@@ -223,9 +227,9 @@
           </div>
           <div class="col-4">
             <div class="text-start">
-              <h3>Fushifaru Maldive</h3>
-              <p>15.01.2021-31.01.2021</p>
-              <p>Ville a partire da 500$ non fartele sfuggire</p>
+              <h3 class="display-5 fw-light">Fushifaru Maldive</h3>
+              <p class="text-secondary fs-6">15.01.2021-31.01.2021</p>
+              <p class="text-secondary fs-6">Ville a partire da 500$ non fartele sfuggire</p>
               <button class="btn btn-dark text-white rounded-5">Best offer</button>
             </div>
           </div>
