--- a/corso/settimana_5_bootstrap/l18_29_11_2023/lezioni/index.html
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/lezioni/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/dist/css/style.min.css">
     <title>Document</title>
-  </head>
-  <body>
-    <main><h1>CIAO BUBU</h1></main>
-  </body>
+</head>
+
+<body>
+    <main>
+        <section>
+            <h1>SASS Examples</h1>
+            <p>sottotitolo</p>
+            <div>
+                <ul>
+                    <li>element-1</li>
+                    <li>element-2</li>
+                    <li>element-3</li>
+                    <li>element-4</li>
+                    <li>element-5</li>
+                </ul>
+            </div>
+            <button class="btn btn-primary">Click me</button>
+            <button class="btn btn-success">Click me</button>
+            <button class="btn btn-warning">Click me</button>
+            <button class="btn btn-danger">Click me</button>
+            <button class="btn-alt">Click me</button>
+            <button class="btn-basic">Click me</button>
+        </section>
+    </main>
+
+    <section>
+        <div class="box-1"></div>
+        <div class="box-2"></div>
+        <div class="box-3"></div>
+        <div class="box-4"></div>
+        <div class="box-5"></div>
+        <div class="box-6">Merry Xmas!</div>
+    </section>
+
+</body>
+
 </html>
