--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <section>
-        <div class="container-img py-5">
+        <div class="container-img">
           <img
             src="https://randomwordgenerator.com/img/picture-generator/55e5d1404851ac14f1dc8460962e33791c3ad6e04e507749742c78d59f44c3_640.jpg"
             alt="prova"
