--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <div class="hero bg-hero">
-        <div class="container-text-hero">
+        <div class="container-text-hero p-5">
           <h1 class="title-big">Titolo Titolo</h1>
           <p class="font-size-6">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi possimus distinctio similique quasi id
@@ -35,7 +35,7 @@
           <button class="button-orange">ciao</button>
           <button class="button-green">ciao</button>
         </div>
-        <div class="container-img-hero py-5">
+        <div class="container-img-hero p-5">
           <img
             src="https://randomwordgenerator.com/img/picture-generator/55e4d74b495bb10ff3d8992cc12c30771037dbf85254794e72267add944a_640.jpg"
             alt="img random "
