--- a/corso/settimana_5_bootstrap/l19_30_11_2023/lezioni/index.html
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/lezioni/index.html
@@ -7,6 +7,24 @@
     <title>sass bs5</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-xxxl-4 bg-orange w-100">a</div>
+        <div class="col-xxl-4"></div>
+      </div>
+    </div>
+    <div class="col-xxxl-4"></div>
+    <div class="col-xxl-4"></div>
+    <div class="card" style="width: 18rem">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title bg-pink">Card title</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the bulk of the card's content.
+        </p>
+        <a href="#" class="btn btn-orange">Go somewhere</a>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
