--- a/corso/settimana_5_bootstrap/l19_30_11_2023/lezioni/index.html
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/lezioni/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/dist/css/style.min.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
