--- a/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/index.html
@@ -420,7 +420,7 @@
         Contattaci
       </button>
 
-      <span>© 2021 Kalina Travel LTD. All Rights Reserved.</span>
+      <span class="fs-10">© 2021 Kalina Travel LTD. All Rights Reserved.</span>
     </footer>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
