--- a/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/index.html
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/index.html
@@ -61,11 +61,11 @@
     </nav>
     <div class="container">
       <div class="text-center text-lg-start bg-light rounded shadow-sm p-5 pt-4 mt-5">
-        <h1 class="display-1 d-inline-block text-muted align-middle">Eveline-R</h1>
+        <h1 class="display-1 d-inline-block text-epicode-1 align-middle">Eveline-R</h1>
         <p class="lead d-inline-block mb-0 align-middle">— Feel the Freedom</p>
         <hr class="my-2" />
-        <p class="fs-3 fst-italic text-muted mb-5">Scopri le destinazioni più calde del momento!</p>
-        <a class="btn btn-info btn-lg px-5 fw-bold text-light" href="#day-deal" role="button">Prenota ora</a>
+        <p class="fs-3 fst-italic text-epicode-3 mb-5">Scopri le destinazioni più calde del momento!</p>
+        <a class="btn btn-epicode-2 btn-lg px-5 fw-bold text-white" href="#day-deal" role="button">Prenota ora</a>
       </div>
 
       <section class="my-5 d-flex flex-column" id="week-deal">
@@ -73,7 +73,7 @@
           <h3>Saldi</h3>
           <button
             type="button"
-            class="btn btn-sm btn-outline-info border-0 align-self-center mb-4"
+            class="btn btn-sm btn-outline-epicode-2 border-0 align-self-center mb-4"
             data-bs-toggle="collapse"
             data-bs-target="#collapseWeekDeal"
             aria-expanded="false"
@@ -84,7 +84,7 @@
         </div>
         <div class="row collapse show g-2 g-md-3 g-xl-5" id="collapseWeekDeal">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -118,7 +118,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-md-none d-lg-block">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -158,7 +158,7 @@
           <h3>Welcome Summer</h3>
           <button
             type="button"
-            class="btn btn-sm btn-outline-info border-0 align-self-center mb-4"
+            class="btn btn-sm btn-outline-epicode-2 border-0 align-self-center mb-4"
             data-bs-toggle="collapse"
             data-bs-target="#collapseWelcomeSummer"
             aria-expanded="false"
@@ -279,7 +279,7 @@
           <div class="col col-lg-8">
             <img
               src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
-              class="img-fluid rounded shadow"
+              class="img-fluid rounded shadow border border-10 border-info"
               alt="maldives"
             />
           </div>
