--- a/corso/settimana_6_js_avanzato/l22_06_12_2023/esercizi/index.html
+++ b/corso/settimana_6_js_avanzato/l22_06_12_2023/esercizi/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.min.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
     <title>Library</title>
   </head>
   <header></header>
-  <body>
+  <body class="bg-lightgray">
     <div class="container mt-5">
-      <div id="bookContainer" class="row justify-content-center"></div>
-    </div>
-    <div class="container mt-5">
-      <div id="cart" class="row justify-content-center">
-        <div class="col-12"></div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-10">
+          <div id="bookContainer" class="row justify-content-center"></div>
+        </div>
       </div>
     </div>
+    <div id="cart" class="container mt-5 bg-darkgray text-light fw-semibold"></div>
 
     <script src="assets/js/index.js"></script>
   </body>
