--- a/corso/settimana_6_js_avanzato/l22_06_12_2023/esercizi/index.html
+++ b/corso/settimana_6_js_avanzato/l22_06_12_2023/esercizi/index.html
@@ -7,7 +7,43 @@
     <link rel="stylesheet" href="assets/css/custom.css" />
     <title>Library</title>
   </head>
-  <header></header>
+  <header>
+    <nav class="navbar navbar-expand bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+          <form class="d-flex" role="search">
+            <!-- Example split danger button -->
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary">Cart  <span id="counter" class="position-absolute top-0 start-0 translate-middle badge rounded-pill bg-danger">
+                0</span>
+              <button
+                type="button"
+                class="btn btn-primary dropdown-toggle dropdown-toggle-split"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <span class="visually-hidden">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu"></ul>
+            </div>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
   <body class="bg-lightgray">
     <div class="container mt-5">
       <div class="row justify-content-center">
@@ -17,7 +53,11 @@
       </div>
     </div>
     <div id="cart" class="container mt-5 bg-darkgray text-light fw-semibold"></div>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/index.js"></script>
   </body>
 </html>
